Sun Mar  3 18:37:13 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the buffer formatting and unformatting routines to
	  check the size of 64 bits types with sizeof().  Affected
	  file is lib/silcutil/silcbuffmt.c.

Mon Feb 25 17:19:05 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Removed 0.6.x backwards support.

Sun Feb 24 12:53:25 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed all integer type names:
	  [u]int[8/16/32/64] -> Silc[UInt/Int][8/16/32/64].  This is
	  to avoid collisions with other libraries using same type names
	  as we did.

Sat Feb 23 20:31:43 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added `prefer_ipv6' argument to the functions
	  silc_net_gethostbyname[_async].  If it is TRUE it will return
	  IPv6 address over IPv4.  If FALSE IPv4 address is returned
	  even if IPv6 address was found.  Affected files
	  lib/silcutil/silcnet.[ch].

	* Added support silc_net_create_connection[_async] to fallback
	  to IPv4 address if IPv6 address could not be used (like if
	  it doesn't work on a specific system).  Affected file in
	  lib/silcutil/unix/silcunixnet.c.

Sat Feb 23 15:20:30 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_schedule_reinit function to do the enlarging
	  of the max tasks handling capabilities of the scheduler.
	  Affected files lib/silcutil/silcschedule.[ch].

Wed Feb 20 20:41:01 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added automatic extern "C" { ... } for C++ compilers so the
	  application does not need to define them.  Affected file
	  includes/silcincludes.h.

	* Renamed lib/silcclient/silcapi.h to silcclient.h as the
	  old name went against naming convention.  Applications now
	  include "silcclient.h" instead of "clientlibincludes.h".
	  Removed includes/clientlibincludes.h, it is redundant now.

	* Renamed includes/version.h to silcversion.h.

	* Added really preliminary support for OS/2 into the util