@@ -1,3 +1,10 @@
+Tue Mar  5 14:37:27 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Changed all silc_[hash|hmac|cipher|pkcs]_default tables to
+	  constants.  Affected files in
+	  lib/silccrypt/silcpkcs.[ch], silchash.[ch], silchmac.[ch] and
+	  silccipher.[ch].
+
 Sun Mar  3 18:37:13 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed the buffer formatting and unformatting routines to
